--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
                     a[b[0]] = b[1];
                     return a;
                 }, {});
-        function httpGet(theUrl)
+        function httpGet(theUrl, callback)
         {
             var xmlHttp = new XMLHttpRequest();
             xmlHttp.open( "GET", theUrl, false );
             xmlHttp.send( null );
-            return xmlHttp.responseText;
+            callback(xmlHttp.responseText);
         }
     </script>
 </head>
