First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <script>
             httpGet("/restaurants", function(response) {
                 console.log("shalev" + response);
-                write(response);
+                document.write(response);
             });
 /*            var request = makeHttpObject();
             request.open("GET", "/restaurant", false);
