First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 restaurants = JSON.parse(response);
             });
             restaurants.forEach(function(entry) {
-                document.write("<div id=\"list-item\"><h2>" + entry.name + "</h2>");
+                document.write("<div class=\"list-item\"><h2>" + entry.name + "</h2>");
                 document.write("<h2>" + entry.location + "</h2>");
                 document.write("<h2>" + entry.type + "</h2></div>");
             });
