First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 -->
         <br><br>
         <script>
+            less = {
+                async: true
+            };
             var restaurants = "";
             httpGet("/restaurants", function(response) {
                 console.log(response);
