--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
                     return a;
                 }, {});
 
-        less = {
-            async: true
-        };
-
         function httpGet(theUrl, callback)
         {
             var xmlHttp = new XMLHttpRequest();
-            xmlHttp.open( "GET", theUrl, false );
+            xmlHttp.open( "GET", theUrl, true );
             xmlHttp.send( null );
             console.log(xmlHttp.responseText);
             callback(xmlHttp.responseText);
