--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         function httpGet(theUrl, callback)
         {
             var xmlHttp = new XMLHttpRequest();
+            xmlHttp.onreadystatechange=function()
+            {
+                if (xmlhttp.readyState==4 && xmlhttp.status==200)
+                {
+                    callback(xmlHttp.responseText);
+                }
+            };
             xmlHttp.open( "GET", theUrl, true );
             xmlHttp.send( null );
             console.log(xmlHttp.responseText);
-            callback(xmlHttp.responseText);
         }
     </script>
 </head>
