First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             var xmlHttp = new XMLHttpRequest();
             xmlHttp.onreadystatechange=function()
             {
-                if (xmlhttp.readyState==4 && xmlhttp.status==200)
+                if (xmlHttp.readyState==4 && xmlHttp.status==200)
                 {
                     callback(xmlHttp.responseText);
                 }
