First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -38,17 +38,20 @@
 <div id="container">
     <div id="content" dir="rtl">
         <form action="add" method="GET">
-            Restaurant name:<br>
-            <input type="text" name="name" value="" >
+            <label for="name">Restaurant name:</label><br>
+            <input type="text" name="name" value="" id="name">
             <br>
-            Location:<br>
-            <input type="text" name="location" value="">
+            <label for="location">Location:</label><br>
+            <input type="text" name="location" value="" id="location">
             <br>
-            Type:<br>
-            <input type="text" name="type" value="">
-            <br><br>
+            <label for="type">Type:</label><br>
+            <input type="text" name="type" value="" id="type">
+            <br>
             <input type="submit" value="Submit">
         </form>
+        <script>
+            document.write(options.added + " successfully added");
+        </script>
     </div>
 </div>
 
