First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -52,7 +52,7 @@
         <script>
             var added = options.added;
             if (added != undefined) {
-                document.write(options.added + " successfully added");
+                document.write("נוסף בהצלחה!");
             }
         </script>
     </div>
