--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 
 <div id="footer_container">
     <div id="footer">
+        <form action="/add-item.html">
+            <input type="submit" value="הוסף מסעדה">
+        </form>
+<!--
         (C) Built By Shalev Moyal
+-->
     </div>
 </div>
 
