First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div id="footer_container">
     <div id="footer">
-        <form action="/add-item.html">
+        <form action="/add-item">
             <input type="submit" value="הוסף מסעדה">
         </form>
 <!--
