--- a/add-item.html
+++ b/add-item.html
@@ -31,7 +31,9 @@
 
 <div id="header_container">
     <div id="header">
-        My Website
+        <a href="/">
+            My Website
+        </a>
     </div>
 </div>
 
