--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="StarterApp">
+<html>
 <head>
     <link rel="stylesheet" type="text/css" href="design.css">
-
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <meta name="viewport" content="initial-scale=1" />
-
     <script>
         var options = decodeURIComponent(window.location.search.slice(1))
                 .split('&')
@@ -30,37 +28,6 @@
             xmlHttp.send( null );
             console.log(xmlHttp.responseText);
         }
-
-        var app = angular.module('StarterApp', ['ngMaterial']);
-
-        app.controller('AppCtrl', ['$scope', '$mdSidenav', function($scope, $mdSidenav){
-            $scope.toggleSidenav = function(menuId) {
-                $mdSidenav(menuId).toggle();
-            };
-
-        }]);
-
-        angular.module('inputBasicDemo', ['ngMaterial', 'ngMessages'])
-                .controller('DemoCtrl', function($scope) {
-                    $scope.user = {
-                        title: 'Developer',
-                        email: 'ipsum@lorem.com',
-                        firstName: '',
-                        lastName: '' ,
-                        company: 'Google' ,
-                        address: '1600 Amphitheatre Pkwy' ,
-                        city: 'Mountain View' ,
-                        state: 'CA' ,
-                        biography: 'Loves kittens, snowboarding, and can type at 130 WPM.\n\nAnd rumor has it she bouldered up Castle Craig!',
-                        postalCode : '94043'
-                    };
-                })
-                .config( function($mdThemingProvider){
-                    // Configure a dark theme with primary foreground yellow
-                    $mdThemingProvider.theme('docs-dark', 'default')
-                            .primaryPalette('yellow')
-                            .dark();
-                });
 
     </script>
 </head>
@@ -91,75 +58,12 @@
 <!--        <img src="./Koala.jpg">
         <img src="./public/Koala.jpg">-->
     </div>
-
-    <div ng-controller="DemoCtrl" layout="column">
-        <md-content md-theme="docs-dark" layout-padding layout="row" layout-sm="column">
-            <md-input-container>
-                <label>Title</label>
-                <input ng-model="user.title">
-            </md-input-container>
-            <md-input-container>
-                <label>Email</label>
-                <input ng-model="user.email" type="email">
-            </md-input-container>
-        </md-content>
-        <md-content layout-padding>
-            <form name="userForm">
-                <div layout layout-sm="column">
-                    <md-input-container style="width:80%">
-                        <label>Company (Disabled)</label>
-                        <input ng-model="user.company" disabled>
-                    </md-input-container>
-                    <md-input-container flex>
-                        <label>Submission Date</label>
-                        <input type="date" ng-model="user.submissionDate">
-                    </md-input-container>
-                </div>
-                <div layout layout-sm="column">
-                    <md-input-container flex>
-                        <label>First name</label>
-                        <input ng-model="user.firstName">
-                    </md-input-container>
-                    <md-input-container flex>
-                        <label>Last Name</label>
-                        <input ng-model="theMax">
-                    </md-input-container>
-                </div>
-                <md-input-container flex>
-                    <label>Address</label>
-                    <input ng-model="user.address">
-                </md-input-container>
-                <md-input-container md-no-float>
-                    <input ng-model="user.address2" placeholder="Address 2">
-                </md-input-container>
-                <div layout layout-sm="column">
-                    <md-input-container flex>
-                        <label>City</label>
-                        <input ng-model="user.city">
-                    </md-input-container>
-                    <md-input-container flex>
-                        <label>State</label>
-                        <input ng-model="user.state">
-                    </md-input-container>
-                    <md-input-container flex>
-                        <label>Postal Code</label>
-                        <input ng-model="user.postalCode">
-                    </md-input-container>
-                </div>
-                <md-input-container flex>
-                    <label>Biography</label>
-                    <textarea ng-model="user.biography" columns="1" md-maxlength="150"></textarea>
-                </md-input-container>
-            </form>
-        </md-content>
-    </div>
-
 </div>
 
 <div id="footer_container">
     <div id="footer">
         <form action="/add-item">
-            <input type="submit" value="הוסף מסעדה">
+            <input class="md-raised" type="submit" value="הוסף מסעדה">
         </form>
 <!--
         (C) Built By Shalev Moyal
