First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="design.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-    <meta name="viewport" content="initial-scale=1" />
     <script>
         var options = decodeURIComponent(window.location.search.slice(1))
                 .split('&')
@@ -63,8 +60,7 @@
 <div id="footer_container">
     <div id="footer">
         <form action="/add-item">
-            <md-button class="md-raised">Button</md-button>
-            <input class="md-raised" type="submit" value="הוסף מסעדה">
+            <input type="submit" value="הוסף מסעדה">
         </form>
 <!--
         (C) Built By Shalev Moyal
