First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="footer_container">
     <div id="footer">
         <form action="/add-item">
-            <input type="submit" value="הוסף מסעדה">
+            <input class="myButton" type="submit" value="הוסף מסעדה">
         </form>
 <!--
         (C) Built By Shalev Moyal
