--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
   <!--  Scripts-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
+  <script>
+      (function($){
+          $(function(){
+
+              $('.button-collapse').sideNav();
+
+          }); // end of document ready
+      })(jQuery); // end of jQuery name space
+  </script>
 <!--
   <script src="js/init.js"></script>
 -->
