--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
       <br><br>
       <h1 class="header center orange-text">Starter Template</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <script>
+              var restaurants = "";
+              httpGet("/restaurants", function(response) {
+                  console.log(response);
+                  restaurants = JSON.parse(response);
+                  document.getElementsByClassName("row center")[0].innerHTML = "";
+                  restaurants.forEach(function(entry) {
+                      document.getElementById("content").innerHTML += "<div class=\"list-item\"><h2>" + entry.name + "</h2><h2>" + entry.location + "</h2><h2>" + entry.type + "</h2>" + "<form method=\"GET\" action=\"/remove?id=" + entry._id + "\"><input type=\"hidden\" name=\"id\" value=\"" + entry._id + "\"><input type=\"submit\" value=\"Remove\"></form><br></div>";
+                  });
+              });
+          </script>
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="/add-item" id="download-button" class="btn-large waves-effect waves-light orange">Add Restaurant</a>
       </div>
       <br><br>
 
