--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   restaurants = JSON.parse(response);
                   document.getElementsByClassName("row center")[0].innerHTML = "";
                   restaurants.forEach(function(entry) {
-                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a href="/remove?id=' + entry._id + '">Remove</a></div> </div> </div></div>'
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="{padding-left: 23px}" href="/remove?id=' + entry._id + '">Remove</a></div> </div> </div></div>'
                   });
               });
           </script>
