--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Starter Template - Materialize</title>
+  <title>מסעדות</title>
 
   <!-- CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
@@ -15,11 +15,11 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a hidden="true" href="#">Navbar Link</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a hidden="true" href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
@@ -27,7 +27,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Starter Template</h1>
+      <h1 class="header center orange-text">מסעדה</h1>
       <div class="row center">
           <script>
               function httpGet(theUrl, callback)
@@ -50,7 +50,7 @@
                   restaurants = JSON.parse(response);
                   document.getElementsByClassName("row center")[0].innerHTML = "";
                   restaurants.forEach(function(entry) {
-                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="{padding-left: 23px}" href="/remove?id=' + entry._id + '">Remove</a></div> </div> </div></div>'
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="padding-left: 23px" href="/remove?id=' + entry._id + '">Remove</a></div> </div> </div></div>'
                   });
               });
           </script>
@@ -101,7 +101,6 @@
     <br><br>
 
     <div class="section">
-
     </div>
   </div>
 
