First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">מסעדה</h1>
+      <h1 class="header center orange-text">מסעדות</h1>
       <div class="row center">
           <script>
               function httpGet(theUrl, callback)
@@ -64,7 +64,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="container" hidden="true">
     <div class="section">
 
       <!--   Icon Section   -->
@@ -104,7 +104,7 @@
     </div>
   </div>
 
-  <footer class="page-footer orange">
+  <footer class="page-footer orange" hidden="true">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
