--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">מסעדות</a>
       <ul class="right hide-on-med-and-down">
         <li><a hidden="true" href="#">Navbar Link</a></li>
       </ul>
@@ -26,8 +26,8 @@
   </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <br><br>
-      <h1 class="header center orange-text">מסעדות</h1>
+<!--      <br><br>
+      <h1 class="header center orange-text">מסעדות</h1>-->
       <div class="row center">
           <script>
               function httpGet(theUrl, callback)
