--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">מסעדות</a>
+    <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="#" class="brand-logo">מסעדות</a>
       <ul class="right hide-on-med-and-down">
         <li><a hidden="true" href="#">Navbar Link</a></li>
       </ul>
