First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -49,15 +49,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <button class="btn-large waves-effect waves-light orange" type="submit" name="action">Submit
                         <i class="mdi-content-send right"></i>
                     </button>
                 </div>
 
             </form>
-        </div>
-        <div class="row center">
-            <a href="/add-item" id="download-button" class="btn-large waves-effect waves-light orange">Add Restaurant</a>
         </div>
         <br><br>
 
