First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -33,23 +33,23 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="name" type="text" class="validate">
-                        <label for="name">Name</label>
+                        <label for="name">שם</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="location" type="text" class="validate">
-                        <label for="location">Location</label>
+                        <label for="location">מיקום</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="type" type="text" class="validate">
-                        <label for="type">Type</label>
+                        <label for="type">סוג המסעדה</label>
                     </div>
                 </div>
-                <div class="row">
-                    <button class="btn-large waves-effect waves-light orange" type="submit" name="action">Submit
+                <div class="row-center">
+                    <button class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
                         <i class="mdi-content-send right"></i>
                     </button>
                 </div>
