--- a/add-item.html
+++ b/add-item.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row-center">
                     <button class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
-                        <i class="mdi-content-send right"></i>
+                        <i class="mdi-content-send left" style='-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";'></i>
                     </button>
                 </div>
 
