First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -28,24 +28,24 @@
     <div class="container">
         <!--      <br><br>
               <h1 class="header center orange-text">מסעדות</h1>-->
-        <div class="row">
+        <div class="row" dir="rtl">
             <form class="col s12" action="add" method="GET">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="name" type="text" class="validate">
-                        <label for="name">שם</label>
+                        <input name="name" id="name" type="text" class="validate">
+                        <label style="padding-left:800px" for="name">שם</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="location" type="text" class="validate">
-                        <label for="location">מיקום</label>
+                        <input name="location" id="location" type="text" class="validate">
+                        <label style="padding-left:800px" for="location">מיקום</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="type" type="text" class="validate">
-                        <label for="type">סוג המסעדה</label>
+                        <input name="type" id="type" type="text" class="validate">
+                        <label style="padding-left:800px" for="type">סוג המסעדה</label>
                     </div>
                 </div>
                 <div class="row-center">
