First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input name="location" id="location" type="text" class="validate">
+                        <input placeholder="מיקום" name="location" id="location" type="text" class="validate">
                         <label style="padding-left:800px" for="location">מיקום</label>
                     </div>
                 </div>
