First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -32,20 +32,20 @@
             <form class="col s12" action="add" method="GET">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input name="name" id="name" type="text" class="validate">
-                        <label style="padding-left:800px" for="name">שם</label>
+                        <input placeholder="שם המסעדה" name="name" id="name" type="text" class="validate">
+                        <label for="name">שם המסעדה</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <input placeholder="מיקום" name="location" id="location" type="text" class="validate">
-                        <label style="padding-left:800px" for="location">מיקום</label>
+                        <label for="location">מיקום</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input name="type" id="type" type="text" class="validate">
-                        <label style="padding-left:800px" for="type">סוג המסעדה</label>
+                        <input placeholder="סוג המסעדה" name="type" id="type" type="text" class="validate">
+                        <label for="type">סוג המסעדה</label>
                     </div>
                 </div>
                 <div class="row-center">
