--- a/add-item.html
+++ b/add-item.html
@@ -13,13 +13,13 @@
 </head>
 <body>
 <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="#" class="brand-logo">מסעדות</a>
+    <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
         <ul class="right hide-on-med-and-down">
-            <li><a hidden="true" href="#">Navbar Link</a></li>
+            <li><a hidden="true" href="/">כל המסעדות</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-            <li><a hidden="true" href="#">Navbar Link</a></li>
+            <li><a hidden="true" href="/">כל המסעדות</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
@@ -33,19 +33,19 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input placeholder="שם המסעדה" name="name" id="name" type="text" class="validate">
-                        <label for="name">שם המסעדה</label>
+                        <label for="name"></label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <input placeholder="מיקום" name="location" id="location" type="text" class="validate">
-                        <label for="location">מיקום</label>
+                        <label for="location"></label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <input placeholder="סוג המסעדה" name="type" id="type" type="text" class="validate">
-                        <label for="type">סוג המסעדה</label>
+                        <label for="type"></label>
                     </div>
                 </div>
                 <div class="row-center">
@@ -60,83 +60,6 @@
 
     </div>
 </div>
-
-
-<div class="container" hidden="true">
-    <div class="section">
-
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="mdi-image-flash-on"></i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="mdi-social-group"></i></h2>
-                    <h5 class="center">User Experience Focused</h5>
-
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="mdi-action-settings"></i></h2>
-                    <h5 class="center">Easy to work with</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <div class="section">
-    </div>
-</div>
-
-<footer class="page-footer orange" hidden="true">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Company Bio</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Settings</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-        </div>
-    </div>
-</footer>
 
 
 <!--  Scripts-->
