First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
-      <ul class="right hide-on-med-and-down">
+      <ul class="left hide-on-med-and-down">
         <li><a href="/add-item">הוסף מסעדה</a></li>
       </ul>
 
