--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 -->
 </head>
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
+  <nav class="orange lighten-1" role="navigation">
     <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
       <ul class="left hide-on-med-and-down">
         <li><a href="/add-item">הוסף מסעדה</a></li>
