First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="row-center">
-                    <button onclick="Materialize.toast('<span>Added</span><a class=&quot;btn-flat yellow-text&quot; href='/'>Go Home<a>', 5000)" class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
+                    <button onclick="Materialize.toast('נוסף בהצלחה!', 4000)" class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
                         <i class="mdi-content-send left" style='-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";'></i>
                     </button>
                 </div>
