--- a/add-item.html
+++ b/add-item.html
@@ -12,7 +12,7 @@
     -->
 </head>
 <body>
-<nav class="light-blue lighten-1" role="navigation">
+<nav class="orange lighten-1" role="navigation">
     <div class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
         <ul class="right hide-on-med-and-down">
             <li><a hidden="true" href="/">כל המסעדות</a></li>
