--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   restaurants = JSON.parse(response);
                   document.getElementsByClassName("row center")[0].innerHTML = "";
                   restaurants.forEach(function(entry) {
-                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a class="mdi-action-delete" style="font-size: 25px; padding-left: 23px; direction: ltr; href="/remove?id=' + entry._id + '"> </a></div> </div> </div></div>'
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"><button onclick="Materialize.toast('נוסף בהצלחה!', 4000)" class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף <i class="mdi-content-send left" style='-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";'></i> </button></div> </div> </div></div>'
                   });
               });
           </script>
