--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   restaurants = JSON.parse(response);
                   document.getElementsByClassName("row center")[0].innerHTML = "";
                   restaurants.forEach(function(entry) {
-                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"><button class="btn-large waves-effect waves-light orange" type="submit" name="action">ADD<i class="mdi-action-delete left" style="-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";"></i> </button></div> </div> </div></div>';
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"><button class="btn-large waves-effect waves-light transparent" type="submit" name="action">ADD<i class="mdi-action-delete right" style="-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";"></i> </button></div> </div> </div></div>';
                   });
               });
           </script>
