--- a/add-item.html
+++ b/add-item.html
@@ -48,8 +48,14 @@
                         <label for="type"></label>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input name="added" id="added" type="hidden" class="validate" value="true">
+                        <label for="added"></label>
+                    </div>
+                </div>
                 <div class="row-center">
-                    <button onclick="Materialize.toast('נוסף בהצלחה!', 4000)" class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
+                    <button class="btn-large waves-effect waves-light orange" type="submit" name="action">הוסף
                         <i class="mdi-content-send left" style='-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";'></i>
                     </button>
                 </div>
@@ -73,6 +79,31 @@
 
         }); // end of document ready
     })(jQuery); // end of jQuery name space
+    var QueryString = function () {
+        // This function is anonymous, is executed immediately and
+        // the return value is assigned to QueryString!
+        var query_string = {};
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+            var pair = vars[i].split("=");
+            // If first entry with this name
+            if (typeof query_string[pair[0]] === "undefined") {
+                query_string[pair[0]] = pair[1];
+                // If second entry with this name
+            } else if (typeof query_string[pair[0]] === "string") {
+                var arr = [ query_string[pair[0]], pair[1] ];
+                query_string[pair[0]] = arr;
+                // If third or later entry with this name
+            } else {
+                query_string[pair[0]].push(pair[1]);
+            }
+        }
+        return query_string;
+    } ();
+    if(QueryString.added != undefined) {
+        Materialize.toast('נוסף בהצלחה!', 4000);
+    }
 </script>
 <!--
   <script src="js/init.js"></script>
