--- a/add-item.html
+++ b/add-item.html
@@ -7,6 +7,11 @@
 
     <!-- CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
+    <style>
+        #toast-container {
+            right: 50%;
+        }
+    </style>
     <!--
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     -->
