First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
     <style>
         #toast-container {
-            right: 50%;
+            right: auto;
+            align-self: center;
         }
     </style>
     <!--
