First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
     <style>
         #toast-container {
-            right: auto;
-            align-self: center;
+            right: 45%;
         }
     </style>
     <!--
@@ -108,7 +107,7 @@
         return query_string;
     } ();
     if(QueryString.added != undefined) {
-        Materialize.toast('נוסף בהצלחה!', 4000);
+        Materialize.toast('נוסף בהצלחה', 4000);
     }
 </script>
 <!--
