--- a/add-item.html
+++ b/add-item.html
@@ -21,7 +21,7 @@
         <ul id="nav-mobile" class="side-nav">
             <li><a hidden="true" href="/">כל המסעדות</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu" style="font-size: small; margin-left: -10px"></i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu" style="font-size: medium; margin-left: -10px"></i></a>
     </div>
 </nav>
 <div class="section no-pad-bot" id="index-banner">
