First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul id="nav-mobile" class="side-nav">
         <li><a href="/add-item">הוסף מסעדה</a></li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu" style="font-size: x-large; margin-left: -10px"></i></a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
