First phpstorm commit

--- a/add-item.html
+++ b/add-item.html
@@ -17,7 +17,7 @@
             return check;
         };
         if (!window.mobilecheck()){
-            document.write("<style> #toast-container {right: 45%} </style>");
+            document.write("<style> #toast-container {right: 45%; top: 70%;} </style>");
         }
     </script>
 
