First phpstorm commit

--- a/public/add-item.html
+++ b/public/add-item.html
@@ -133,7 +133,7 @@
             cache: false,
             type: "GET",
             success: function (response) {
-                alert(response);
+                Materialize.toast(response, 3000);
             },
             error: function (xhr) {
 
