--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                   restaurants = JSON.parse(response);
                   document.getElementsByClassName("row center")[0].innerHTML = "";
                   restaurants.forEach(function(entry) {
-                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row" dir="rtl"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="padding-left: 23px; font-size: 16px;" href="/remove?id=' + entry._id + '">לחץ להסרה</a></div> </div> </div></div>';
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row" dir="rtl"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="padding-left: 23px; font-size: 16px;" href="#" onclick="=removeItem(' + entry._id + ')">לחץ להסרה</a></div> </div> </div></div>';
                   });
               });
+
+
           </script>
       </div>
 <!--      <div class="row center">
@@ -76,6 +78,24 @@
           }); // end of document ready
       })(jQuery); // end of jQuery name space
   </script>
+
+  var removeItem = function (id) {
+  $.ajax({
+  url: "remove",
+  data: {
+  "id": id
+  },
+  cache: false,
+  type: "GET",
+  success: function (response) {
+  alert(response);
+  //Materialize.toast(response, 3000);
+  },
+  error: function (xhr) {
+
+  }
+  });
+  }
 <!--
   <script src="js/init.js"></script>
 -->
