First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           $.ajax({
               url: "remove",
               data: {
-                  "id": id
+                  "id": id,
+                  "name": "shalev"
               },
               cache: false,
               type: "GET",
@@ -94,7 +95,7 @@
 
               }
           });
-      }
+      };
 
   </script>
 <!--
